# grex

./: .build.yml  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .style.yapf  README.md  meson.build  meson_options.txt  packcc.sh
examples/: meson.build
examples/hello/: hello-window.c  hello-window.h  hello-window.xml  hello.c  hello.gresource.xml  hello.xml  meson.build
examples/hello-gjs/: hello-window.xml  hello.gresource.xml  hello.js  meson.build
src/: grex-attribute-directive.c  grex-attribute-directive.h  grex-binding-closure-private.h  grex-binding-closure.c  grex-binding.c  grex-binding.h  grex-child-property-container-adapter.c  grex-child-property-container-adapter.h  grex-config.in.h  grex-constant-value-expression.c  grex-container-adapter.c  grex-container-adapter.h  grex-directive.c  grex-directive.h  grex-element.c  grex-element.h  grex-expression-context-private.h  grex-expression-context.c  grex-expression-context.h  grex-expression-private.h  grex-expression.c  grex-expression.h  grex-fragment-host.c  grex-fragment-host.h  grex-fragment.c  grex-fragment.h  grex-gtk-box-container-adapter.c  grex-gtk-box-container-adapter.h  grex-gtk-child-property-container-adapter.c  grex-gtk-child-property-container-adapter.h  grex-gtk-grid-container-adapter.c  grex-gtk-grid-container-adapter.h  grex-gtk-widget-container-adapter.c  grex-gtk-widget-container-adapter.h  grex-if-directive.c  grex-if-directive.h  grex-inflator.c  grex-inflator.h  grex-key-private.h  grex-key.c  (+27 more)
tests/: conftest.py  meson.build  test_binding.py  test_directives.py  test_element.py  test_expression.py  test_expression_context.py  test_fragment.py  test_fragment_host.py  test_inflator.py  test_key.py  test_property_set.py  test_resource_loader.py  test_source_location.py  test_template.py  test_value_holder.py  test_value_parser.py
